2016-11-28 Riccardo Mottola <rm@gnu.org>

	* Modules/Parsers/ProjectCenter/PCParser.m
	Fix off-by-one in length when checking the last character.

2016-11-25 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PipeDelegate.h
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m
	skip and report empty lines as PCDBEmptyRecord

2016-11-19 11:22-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	* Modules/Debuggers/ProjectCenter/PCDebuggerViewDelegateProtocol.h
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Added/implemented
	debuggerSetup method.

2016-11-18 Riccardo Mottola <rm@gnu.org>

	* Modules/Projects/Application/PCAppProject+Inspector.h
	* Modules/Projects/Application/PCAppProject+Inspector.m
	* Modules/Projects/Application/Resources/Inspector.gorm
	Connect add/remove buttons.

	* Modules/Debuggers/ProjectCenter/PipeDelegate.m
	Commands need new-line.

2016-11-17 09:20-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Change flag to yes
	in parseLine method to indicate debugger has started.

2016-11-17 09:18-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PCDebugger.h
	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	* Modules/Debuggers/ProjectCenter/PipeDelegate.h
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m: Added notification
	to fix breakpoint loading.

2016-09-29 Riccardo Mottola <rm@gnu.org>

	* Modules/Debuggers/ProjectCenter/PCDebugger.h
	* Modules/Debuggers/ProjectCenter/PCDebugger.m
	* Modules/Debuggers/ProjectCenter/PCDebuggerViewDelegateProtocol.h
	* Modules/Debuggers/ProjectCenter/PipeDelegate.m
	Add skeleton to handle breakpoints, add breakpoint types.

2016-06-06 11:47-EDT Gregory John Casamento <greg.casamento@gmail.com>

	* Modules/Debuggers/ProjectCenter/PCDebuggerView.m: Add code to
	make commands appear when the button is pressed.

2016-05-22 Riccardo Mottola <rm@gnu.org>
